# render-django-template

./: .gitignore  Makefile  Pipfile  README.md  build.sh  db.sqlite3  manage.py  mypy.ini  pyproject.toml  pytest.ini  render.yaml
mynewproject/: apps.py  asgi.py  celery.py  secrets.py  settings.py  urls.py  websocket_urls.py  wsgi.py
mynewproject/tests/debug/: test_ping.py
mynewproject/views/: api.py
mynewproject/views/debug/: router.py  schema.py  tasks.py
mynewproject/views/websocket/: ping_consumer.py
