[project]
name = "render-django-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.2",
    "celery-stubs>=0.1.3",
    "channels>=4.3.2",
    "daphne>=4.2.1",
    "dj-database-url>=3.1.2",
    "django>=6.0.2",
    "django-cors-headers>=4.9.0",
    "django-ninja>=1.5.3",
    "django-stubs>=5.2.9",
    "djangorestframework>=3.16.1",
    "djangorestframework-stubs>=3.16.8",
    "gunicorn>=25.1.0",
    "mypy>=1.19.1",
    "psycopg2>=2.9.11",
    "pydantic-django>=0.1.1",
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
    "redis>=7.2.0",
    "ruff>=0.15.2",
    "uvicorn>=0.41.0",
]
